--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,30 +1,49 @@
 body {
-	background: black;
-	font-family: Verdana;
+	font-family: Helvetica;
 	text-align: center;
-	color: white;
 }
 
 h1 {
-	font-weight: normal;
-	font-size: 50px;
+	font-weight: bold;
+	font-size: 70px;
+	color: white;
 }
 
-a {
-	color: aquamarine;
-	font-size: 16px;
+
+nav {
+	color: white;
 }
 
 p {
-	font-size: 21px;
+	font-size: 14px;
 	color: gray;
 }
 
 h2 {
-	font-weight: 300;
-	font-size: 42px;
+	font-weight: bold;
+	font-size: 32px;
+}
+
+h4 {
+	font-size:23;
+	font-weight: bold;
+	color: white;
+	background-image: url("../../images/the-flatiron-building.png");
+}
+
+a{
+	color: white;
+	font-size:18px;
 }
 
 .footer {
-	text-align: right;
+	font-size: 11px;
+	color: white;
+	background-color: dimgray;
+	text-align: left;
 }
+
+.header {
+	background-image: url("../../images/the-flatiron-building.png");
+}
+
